--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-resizable": "^3.0.8"
   }
 }
