--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.10.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
