--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.34",
     "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.10.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "immer": "^10.1.1",
     "localforage": "^1.10.0",
     "monaco-jsx-highlighter": "^2.77.77",
     "prettier": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.9",
     "react-resizable": "^3.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
